# EnglishSpellingCorrector

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in
src/candidator/: Makefile.am  Makefile.in  candidator.c  candidator.h  hashtable.c  hashtable.h  spellchecker.c  spellchecker.h
src/core/: Makefile.am  Makefile.in  spellcorrector.c
src/header/: Makefile.am  Makefile.in  args.c  args.h  err.c  file.c  file.h  str.c  str.h  test.h
src/langmod/: Makefile.am  Makefile.in  langmod.c  langmod.h
src/test/: Makefile.am  Makefile.in  langmod_test.c  spellcorrector_test.c
